Mise à jour des dépendances requises dans requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,59 @@
-# Dépendances principales
-python-yara>=4.2.0
-tensorflow>=2.9.0
-pytorch>=1.12.0
-numpy>=1.23.2
-pandas>=1.4.3
-scikit-learn>=1.1.2
-flask>=2.2.2
-fastapi>=0.85.0
-uvicorn>=0.18.3
-tqdm>=4.64.1
-requests>=2.28.1
-psutil>=5.9.1
-cryptography>=38.0.1
-sqlalchemy>=1.4.41
-pywin32>=304;platform_system=="Windows"
-docker>=6.0.0
-aiohttp>=3.8.3
-pyyaml>=6.0
-matplotlib>=3.6.0
-seaborn>=0.12.0
-regex>=2022.9.13
-pymongo>=4.2.0
-elasticsearch>=8.4.0
-joblib>=1.2.0
-ray>=2.0.0
-neo4j>=5.0.0
+# BioCybe - Système de cyberdéfense bio-inspiré
+# ===========================================
+# Dépendances requises
 
-# Analyse de fichiers
-pefile>=2022.5.30
-pyelftools>=0.29
-olefile>=0.46
-python-magic>=0.4.27
-capstone>=4.0.2
+# Bibliothèques de base
+pyyaml>=6.0        # Traitement des fichiers de configuration YAML
+psutil>=5.9.0      # Monitoring système (CPU, mémoire, processus, réseau)
+requests>=2.27.1   # Requêtes HTTP pour les APIs et mises à jour
+numpy>=1.22.3      # Calculs numériques
+pandas>=1.4.2      # Analyse de données et structures tabulaires
 
-# Analyse réseau
-scapy>=2.4.5
-dpkt>=1.9.8
-pypcap>=1.3.0
+# Détection et sécurité
+yara-python>=4.2.0  # Moteur de règles YARA pour la détection par signatures
+pycryptodome>=3.14.1  # Cryptographie et fonctions de hashing avancées
+python-magic>=0.4.25  # Détection des types de fichiers
+pyelftools>=0.28   # Analyse des fichiers ELF (Linux)
+pefile>=2022.5.30  # Analyse des fichiers PE (Windows)
 
-# Sandbox
-cuckoo>=3.0.0
-firejail>=0.9.66
+# Machine Learning et analyse comportementale
+scikit-learn>=1.0.2  # Apprentissage machine et détection d'anomalies
+tensorflow>=2.8.0   # Deep learning pour détection avancée (optionnel)
+# ou tensorflow-cpu pour une version plus légère
+joblib>=1.1.0       # Parallélisation et persistance de modèles
 
-# Outils d'analyse
-pyrabin>=0.7
-pycryptodome>=3.15.0
-ssdeep>=3.4
-binwalk>=2.3.3
+# Interface web et visualisation
+flask>=2.1.1       # Serveur web pour le tableau de bord
+flask-login>=0.6.0 # Authentification pour le tableau de bord
+plotly>=5.7.0      # Visualisation interactive de données
+dash>=2.3.1        # Extension Flask pour tableaux de bord dynamiques
+dash-bootstrap-components>=1.1.0  # Composants CSS pour Dash
 
-# Tests et développement
-pytest>=7.0.0
-pytest-cov>=4.0.0
-black>=22.8.0
-isort>=5.10.1
-mypy>=0.971
-flake8>=5.0.4
+# XAI (IA Explicable)
+shap>=0.40.0       # Interprétation des modèles d'apprentissage
+lime>=0.2.0.1      # Interprétation locale des prédictions
+eli5>=0.12.0       # Débogage et explication des modèles d'apprentissage
 
-# Documentation
-sphinx>=5.1.1
-sphinx-rtd-theme>=1.0.0
-nbsphinx>=0.8.9
+# Intégration système
+pyinotify>=0.9.6; sys_platform == 'linux'  # Surveillance de fichiers sous Linux
+watchdog>=2.1.7    # Surveillance de fichiers multi-plateforme
+python-iptables>=1.0.0; sys_platform == 'linux'  # Interface iptables pour Linux
+pywin32>=303; sys_platform == 'win32'  # API Windows pour Windows
+pyobjc>=8.5; sys_platform == 'darwin'  # API Objective-C pour macOS
 
-# Optionnel
-jupyter>=1.0.0
-nbconvert>=7.2.1
-protobuf>=3.19.0
+# Réseau et communication
+netifaces>=0.11.0  # Interfaces réseau
+scapy>=2.4.5       # Analyse et manipulation de paquets réseau (optionnel)
+dnspython>=2.2.1   # Résolution et analyse DNS
+websockets>=10.3   # Communication WebSocket pour interface temps réel
+
+# Journalisation et surveillance
+python-json-logger>=2.0.2  # Journalisation au format JSON
+structlog>=21.5.0  # Journalisation structurée
+prometheus-client>=0.14.1  # Exposition de métriques pour Prometheus
+
+# Tests et qualité
+pytest>=7.1.1      # Framework de test
+pytest-cov>=3.0.0  # Couverture de code
+black>=22.3.0      # Formatage de code
+flake8>=4.0.1      # Linter de code
