--- a/.github/workflows/code_review.yml
+++ b/.github/workflows/code_review.yml
@@ -1,1 +1,27 @@
 
+name: IA Code Review
+
+on:
+  pull_request:
+    paths:
+      - '**.py'
+
+jobs:
+  review:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: pip install openai
+
+      - name: Run code review
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        run: python review_code.py
